# allegro_hand_kdl

./: CMakeLists.txt  README.md  package.xml
action/: PoseControl.action
config/: allegro_params.yaml  cartesian_poses.yaml  gains.yaml  joint_poses.yaml  params.yaml  pd_tune_notes.txt
include/allegro_hand_kdl/: allegro_kdl_config.h  cartesian_force.h  cartesian_position_control.h  inverse_dynamics.h  joint_position_control.h  kinematics.h  pose_control_client.h  template_trajectory_control.h
launch/: allegro_torque.launch  base_pose_publisher.launch  cartesian_pose_control.launch  combine_torques.launch  control_force.launch  envelop_force.launch  forward_kinematics.launch  gravity_compensate.launch  joint_pose_control.launch  pose_action_server.launch  single_joint_control.launch
nodes/: allegro_joint_filter.py  pose_action_client
src/: allegro_kdl_config.cpp  cartesian_force.cpp  cartesian_position_control.cpp  cartesian_trajectory_control.cpp  inverse_dynamics.cpp  joint_position_control.cpp  joint_trajectory_control.cpp  kinematics.cpp
src/nodes/: base_pose_publisher.cpp  envelop_force.cpp  fake_control.cpp  fk_publisher.cpp  force_control.cpp  gravity_compensater.cpp  pose_client.cpp
src/servers/: cartesian_pose_server.cpp  joint_pose_server.cpp  pose_action_server.cpp
srv/: PoseRequest.srv
test/: inverse_dynamics_node.cpp  kinematics_node.cpp  single_joint_control_node.cpp
